fix: [UI] color pattern and dark mode colors

--- a/app/src/styles/globals.css
+++ b/app/src/styles/globals.css
@@ -6,10 +6,10 @@
 
 @layer base {
   body {
-    @apply bg-gray-50
-    dark:bg-gray-900
-    text-gray-900
-    dark:text-gray-50
+    @apply bg-white
+    dark:bg-gray-800
+    text-gray-800
+    dark:text-white
     transition-colors;
   }
 }
